--- a/pair.html
+++ b/pair.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Arslan-MD pairing site Dashboard</title>
+  <title>FAIZAN-AI pairing site Dashboard</title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 <style>
     :root {
@@ -314,13 +314,13 @@
 </head>
 <body>
   <!-- Blurred Background Image -->
-  <img src="https://files.catbox.moe/a6chsf.jpg" alt="Arslan Tech Background" class="background-image">
+  <img src="https://files.catbox.moe/ejufwa.jpg" alt="FAIZAN-AI Background" class="background-image">
 
   <!-- Header with Logo -->
   <header class="header">
     <div class="logo-container">
-      <img src="https://files.catbox.moe/a6chsf.jpg" alt="Arslan-MD bot Logo" class="logo-img">
-      <div class="logo-text">Arslan-MD pairing </div>
+      <img src="https://files.catbox.moe/ejufwa.jpg" alt="FAIZAN-AI bot Logo" class="logo-img">
+      <div class="logo-text">FAIZAN-AI pairing </div>
     </div>
     
     <!-- Battery Indicator -->
@@ -335,7 +335,7 @@
     <!-- Pairing Box -->
     <div class="box">
       <h2>PAIRING CODE</h2>
-      <h5>Arslan-MD BOT </h5>
+      <h5>FAIZAN-AI BOT </h5>
       <p>Please enter your number without country code</p>
       
       <div class="input-container">
@@ -354,13 +354,13 @@
     <div class="music-player">
       <h3>PLAY NOW</h3>
       <div class="music-title">PLAY SONG</div>
-      <div class="music-subtitle">By Arslan Tech</div>
+      <div class="music-subtitle">By FAZI Tech</div>
       <button class="play-btn" onclick="togglePlay()">
         <i class="fas fa-pause" id="play-icon"></i>
       </button>
       <div class="time-display" id="time1">0:00</div>
       <div class="music-subtitle">PAIRING SONG</div>
-      <audio id="audio1" src="https://files.catbox.moe/hzxqzu.mp3" loop></audio>
+      <audio id="audio1" src="https://files.catbox.moe/crak6q.mp3" loop></audio>
     </div>
   </div>
 
